--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -75,6 +75,8 @@
     <link rel="stylesheet" href="/static/css/reports.css">
     <link rel="stylesheet" href="/static/css/monitoring.css">
     <link rel="stylesheet" href="/static/css/insights.css">
+    <link rel="stylesheet" href="/static/css/playbooks.css">
+    <link rel="stylesheet" href="/static/css/crossproject.css">
 
     <!-- Print styles -->
     <link rel="stylesheet" href="/static/css/print.css" media="print">
@@ -1853,6 +1855,8 @@
     <script src="{{ url_for('static', filename='js/reports.js') }}"></script>
     <script src="{{ url_for('static', filename='js/monitoring.js') }}"></script>
     <script src="{{ url_for('static', filename='js/insights.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/playbooks.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/crossproject.js') }}"></script>
     <script src="{{ url_for('static', filename='js/init.js') }}"></script>
 
     <script>
